# INF367A-26V-Recod.ai-LUC-Forgery-Kaggle

./: .gitignore  README.md  data  dataset_utils.py  main.ipynb  main.py  metric_sanity_check.py  pixelutil.ipynb  pyproject.toml  pyproject.toml.broken  quick_check.py  recodai-f1.py  recodai_f1.py  sliding_window_impl.py  train_baseline.py  train_baseline.py.bak_add_dice  train_baseline.py.bak_dupe_main  train_baseline.py.bak_fix_indent  train_baseline.py.bak_mask_union
configs/: baseline_config.py
data/: README.md
datasets/: __init__.py  forgery_dataset.py
docs/: IMPROVEMENTS.md  pipeline_suggestion.md
engine/: __init__.py  train_loop.py  validate_loop.py
inference/: __init__.py  postprocess.py  sliding_window.py  sliding_window_dino.py  sliding_window_dino_impl.py  sliding_window_impl.py
models/: dino_segmenter.py  segnext_segmenter.py  unet_small.py
notebooks/: run_train_baseline.ipynb
util/: pixelmapUtil.py
