[project]
name = "inf367a-26v-recod-ai-luc-forgery-kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "timm>=0.9.0",
    "numba>=0.63.1",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "torch>=2.2.0",
    "torchvision>=0.25.0",
]
